Fix rhymeform spacing now that we've turned off wpautop

--- a/css/poem.styl
+++ b/css/poem.styl
@@ -114,7 +114,7 @@ label
     padding-bottom 5px
     padding-right 10px
     float right
-    bottom 0px
+    bottom 0
     right 10px
     button
         margin 0 auto
@@ -136,7 +136,7 @@ small
         vertical-align middle
 
 #rhymebar
-    height 0px
+    height 0
     background #999
     float left
     width 7px
@@ -195,7 +195,10 @@ small
 
 #rhymeform
     p
-        height 16px
+      height 16px
+
+    p:first-child
+      height inherit
 
 
 .indent
